--- a/style.css
+++ b/style.css
@@ -232,13 +232,46 @@ img{
     opacity: 0.9;
     background-color: white;
 }
-#section-four::after{
+.section-four::after{
     content: '';
     display: table;
     clear: both;
 }
-
 /* section four ends here */
+
+/* Footer starts here */
+.footer{
+    background-color: black;
+    color: white;
+    width: 100%;
+    height: 200px;
+    margin-top: 10px;
+    text-align: left;
+    padding: 10px;
+}
+.f-header{
+    margin-left: 80px;
+    font-size: 1.4rem;
+
+}
+h3{
+    color: white;
+    font-size: 1.4rem;
+    text-align: left;
+}
+ul li{
+    list-style: none;
+    padding: 5px;
+}
+ul li a{
+    color:cornsilk;
+    text-decoration: none;
+    padding-top: 10px;
+    font-size: 1.2rem;
+}
+
+
+/* Footer starts here */
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
 .col-3 {width: 25%;}
