--- a/style.css
+++ b/style.css
@@ -515,6 +515,19 @@ ul li a{
     .last-head{
         text-align: center;
     }
+    .unorder-1{
+        text-align: left;
+    }
+    .unorder-2{
+        text-align: left;
+    }
+    .unorder-3{
+        text-align: left;
+    }
+    .unorder-4{
+        text-align: left;
+    }
   }
+  
 
 
